_Workflow/HomeLab/Kubernetes/Local-Single-Node/7-Argo/_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($request_uri ~* \.(js|css|gif|jpe?g|png)) {
        expires 7d;
        add_header Cache-Control "public";
      }
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: argocd-server
spec:
  rules:
  - host: cd-aws.myrightone.com
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 443
        path: /
        pathType: ImplementationSpecific
  - host: cd-aws.chatie.love
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 443
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - cd-aws.myrightone.com
    secretName: myrightone-com-tls-2109y
  - hosts:
    - cd-aws.chatie.love
    secretName: chatie-tls-1y
