_Workflow/HomeLab/Kubernetes/Local-Single-Node/7-Argo/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    cert-manager.io/issuer: letsencrypt-argocd
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # If you encounter a redirect loop or are getting a 307 response code
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.cloudnative.love
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
  tls:
  - hosts:
    - argocd.cloudnative.love
    secretName: letsencrypt-argocd
# curl -kL --resolve argocd.cloudnative.love:80:192.168.8.151 http://argocd.cloudnative.love
# curl -kivL -H 'Host: www.example.com' 'http://203.0.113.2'
